# project-serpens

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  deploy_documentation.yml  publish.yml  publish_all.yml  publish_cli.yml  publish_kernel.yml
.github/workflows/publish/: all.yml  cli.yml  kernel.yml
cli/: Cargo.toml
documentation/: book.toml
documentation/src/: README.md  SUMMARY.md
documentation/src/cli/: README.md
documentation/src/for_developers/: README.md
examples/: basic.rs
kernel/: Cargo.toml  README.md
kernel/src/: lib.rs  session.rs
kernel/src/modules/events_log/: mod.rs
kernel/src/modules/passive_dns/: crt_sh.rs  mod.rs
kernel/src/modules/ready/: mod.rs
src/: config.rs  events.rs  main.rs  options.rs  session.rs
src/logger/: mod.rs
src/modules/: mod.rs
src/modules/enumerate_files/: mod.rs
src/modules/enumerate_subdomains/: mod.rs
src/modules/passive_dns/: mod.rs
src/modules/ready/: mod.rs
