[package]
name = "project-serpens"
description = "👁️ Uncover the unseen"
version = "0.1.0"
license = "MIT"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/LICENSE.md",
    "/README.md",
    "/SECURITY.md",
    "/src/**",
]
repository = "https://github.com/kkrypt0nn/project-serpens"
edition = "2021"

[workspace]
members = ["kernel"]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
project-serpens-kernel = { version = "0.1.0", path = "kernel" }
serde = { version = "1.0.193", features = ["derive"] }
