[package]
name = "project-serpens"
description = "👁️ Uncover the unseen"
version = "0.3.0"
license = "MIT"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/LICENSE.md",
    "/README.md",
    "/SECURITY.md",
    "/src/**",
    "/resources/**",
]
repository = "https://github.com/kkrypt0nn/project-serpens"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
flume = "0.11.1"
heck = "0.5.0"
lazy_static = "1.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
tangra = "1.3.0"
