[package]
name = "project-absence"
description = "👁️ Uncover the unseen"
version = "0.1.0"
license = "MIT"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/LICENSE.md",
    "/README.md",
    "/SECURITY.md",
    "/src/**",
]
repository = "https://github.com/kkrypt0nn/project-absence"
edition = "2021"

[dependencies]
project-absence-kernel = { version = "0.1.1", path = ".." }