[package]
name = "project-absence-kernel"
description = "📡 The kernel of Project Absence"
version = "0.2.1"
license = "MIT"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md",
    "/examples/**",
    "/src/**",
    "/tests/**",
    "/resources/**",
]
repository = "https://github.com/kkrypt0nn/project-absence"
edition = "2021"

[lib]
name = "kernel"

[dependencies]
chrono = "0.4.31"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.12.1", features = ["blocking", "json"] }
serde = { version = "1.0.189", features = ["derive"] }
tangra = "1.3.0"
